Polished version completed, still needs refactoring and ongoing work.